x scrollbar fixed

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 div{
     padding: 0;
 }
@@ -19,7 +23,7 @@ div{
     margin-right: auto;
 
     height: 30px;
-    width: 300px;;
+    width: 300px;
     margin-top: 15px;
 }
 
